# transcriptionist-v3

./: .editorconfig  .gitignore  AI_BUGS_FIXED_SUMMARY.md  BUG_FIXES_REPORT.md  BUILD_GUIDE.md  CHANGELOG_v1.0.1.md  CHANGELOG_v1.1.1.md  CLAP_RETRIEVAL_OPTIMIZATION_PLAN.md  COPYING  GPL_COMPLIANCE_CHECKLIST.md  IMPORT_OPTIMIZATION.md  INSTALL.md  LICENSE  QUICK_TEST_IMPORT.md  README.md  TEST_AI_FIXES.md  VERIFICATION_CHECKLIST.md  __init__.py  __main__.py  alembic.ini  build.bat  build.spec  clear_database.bat  clear_database_simple.ps1  debug_naming_page.bat  download_inno_chinese_lang.bat  download_innosetup.bat  hook-packaging.py  install_deps.bat  installer.iss  installer_nuitka.iss  pyproject.toml  rebuild.bat  requirements-dev.txt  requirements.txt  run.bat  run_qt.bat  runtime_hook_multiprocessing.py  verify_fixes.bat
.github/workflows/: search-benchmark-baseline.yml  search-benchmark-gate.yml
application/: __init__.py
application/ai/: clap_preprocess.py  clap_service.py
application/ai_engine/: __init__.py  async_processor.py  audio_analyzer.py  base.py  provider_registry.py  service_factory.py  tag_generator.py  translation_cache.py  translation_manager.py
application/ai_jobs/: __init__.py  index_writer.py  job_constants.py  job_store.py  selection.py
application/ai_manager/: __init__.py
application/audio_processing/: blending.py
application/batch_processor/: __init__.py  converter.py  metadata_editor.py  normalizer.py  processor.py  worker_pool.py
application/freesound_integration/: __init__.py
application/library_manager/: __init__.py  file_watcher.py  library_service.py  metadata_extractor.py  renaming_service.py  scanner.py
application/naming_manager/: __init__.py  batch_rename.py  cleaning.py  glossary.py  history.py  templates.py  ucs_builder.py  ucs_parser.py  validator.py
application/online_resources/: __init__.py
application/playback_manager/: __init__.py  player.py  qt_player.py
application/project_manager/: __init__.py  exporter.py  manager.py  repository.py  templates.py
application/search_engine/: __init__.py  benchmark_gate_status.py  query_orchestrator.py  query_parser.py  search_engine.py
core/: __init__.py  config.py  fonts.py  i18n.py  utils.py
core/constants/: __init__.py
core/logging/: __init__.py
docs/: AI_INDEX_CLAP_UPGRADE_PLAN.md  AI_SEARCH_AND_TAGGING_ANALYSIS.md  ARCHITECTURE_DECISION_v1.2.0.md  BUILD_NUITKA_v1.2.0.md  DB_ALEMBIC_WORKFLOW_v1.2.0.md  IMPLEMENTATION_PLAN_v1.2.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_READINESS_CHECKLIST_v1.2.0.md  SEARCH_CONSISTENCY_BASELINE_TEMPLATE_v1.2.0.md  STRESS_TEST_GUIDE_v1.2.0.md  UPDATE_LOG_v1.2.0_COLLAB_DETAILED.md  developer_guide.md  quodlibet_integration_analysis.md  user_guide.md
docs/reports/: modelscope_audio_inference_candidates.md
domain/: __init__.py
domain/exceptions/: __init__.py
domain/interfaces/: __init__.py
domain/models/: __init__.py  audio_file.py  metadata.py  project.py  search.py
domain/value_objects/: __init__.py
infrastructure/: __init__.py
infrastructure/ai_models/: __init__.py
infrastructure/audio_engine/: __init__.py
infrastructure/cache/: __init__.py  lru_cache.py  metadata_cache.py  query_cache.py  utils.py  waveform_cache.py
infrastructure/database/: __init__.py  backup.py  connection.py  models.py
infrastructure/external_apis/: __init__.py
infrastructure/file_system/: __init__.py
infrastructure/performance/: __init__.py  memory_profiler.py  startup_optimizer.py
lib/: __init__.py
lib/quodlibet_adapter/: __init__.py  formats_adapter.py  pattern_adapter.py  player_adapter.py  query_adapter.py  rename_adapter.py
locales/: README.md  compile_translations.py  extract_strings.py  transcriptionist.pot
packaging/: __init__.py
packaging/linux/: build_appimage.sh  com.transcriptionist.app.desktop  com.transcriptionist.app.metainfo.xml  com.transcriptionist.app.yml
packaging/windows/: build_installer.py
plugins/: __init__.py
resources/defaults/: .gitkeep
resources/fonts/: README.md
resources/icons/: .gitkeep
resources/templates/: .gitkeep
resources/themes/: .gitkeep
runtime/: .embedded  __init__.py  bootstrap.py  environment.py  get-pip.py  recovery.py  runtime_config.py
scripts/: benchmark_audio_list_view.py  benchmark_search_orchestrator.py  db_current.py  db_downgrade.py  db_revision.py  db_stamp.py  db_upgrade.py  discover_modelscope_audio_inference.py  export_clap_preprocess_onnx.py  install_embedded_deps.bat  install_embedded_deps.py  metadata_worker.py  run_release_readiness_check.py  run_search_benchmark_matrix.py  run_search_benchmark_pipeline.py  run_search_benchmark_release_gate.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
ui/: __init__.py  main_window.py
ui/ai_panel/: __init__.py
ui/batch_processing/: __init__.py
ui/components/: __init__.py  header_bar.py  player_bar.py  sidebar.py
ui/dialogs/: __init__.py  batch_rename_dialog.py  batch_wizard_dialog.py  conflict_resolution_dialog.py  export_wizard_dialog.py  project_creation_dialog.py  rename_dialog.py  template_editor_dialog.py
ui/examples/: batch_rename_usage_example.py
ui/layouts/: workstation_layout.py
ui/library_view/: __init__.py
ui/online_resources/: __init__.py
ui/pages/: __init__.py  ai_generation_page_qt.py  ai_search_page_qt.py  ai_translate_page_qt.py  audio_editor_page_qt.py  library_page_qt.py  naming_rules_page_qt.py  online_resources_page_qt.py  projects_page_qt.py  settings_page_qt.py  tags_page_qt.py  toolbox_page_qt.py
ui/panels/: ai_inspector_panel.py  audio_card_delegate.py  audio_files_panel.py  batch_center_panel.py  resource_panel.py  timeline_panel.py
ui/player_widget/: __init__.py
ui/project_view/: __init__.py
ui/search_interface/: __init__.py
ui/themes/: __init__.py  theme_tokens.py
ui/utils/: __init__.py  audioset_labels.py  flow_layout.py  hierarchical_translate_worker.py  native_dialogs.py  notifications.py  resources.py  translation_items.py  ucs_labels.py  ucs_labels_data.py  ui_refresh.py  workers.py
(+62 files in other folders)
